ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_30.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--martina--virgin-and-martyr\", \"st--martina\"]"
expression: s.0
---
2025-01-30
Vespers of St. Martina, Virgin and Martyr:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Proper
  Hymn:        Proper
  Verse:       Proper
  Magnificat:  Proper
  Collect:     Proper
