ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_01_31.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--john-bosco--confessor\", \"st--john-bosco\"]"
expression: s.0
---
2025-01-31
Vespers of St. John Bosco, Confessor:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessors (Non-Bishop)
  Hymn:        Common of Confessors (Non-Bishop)
  Verse:       Common of Confessors (Non-Bishop)
  Magnificat:  Common of Confessors (Non-Bishop)
  Collect:     Proper
