ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_02_03.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"feria-ii-week-iv-after-epiphany\", \"feria-of-time-after-epiphany\"]"
expression: s.0
---
2025-02-03
Vespers of Feria II week IV after Epiphany:
Vespers:
  Antiphons:   Psalter
  Psalms:      Psalter
  Chapter:     Ordinary of Time after Epiphany (or Psalter)
  Hymn:        Ordinary of Time after Epiphany (or Psalter)
  Verse:       Ordinary of Time after Epiphany (or Psalter)
  Magnificat:  Ordinary of Time after Epiphany (or Psalter)
  Collect:     of Sunday
