ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_02_04.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--andrew-corsini--bishop-and-confessor\", \"st--andrew-corsini\"]"
expression: s.0
---
2025-02-04
Vespers of St. Andrew Corsini, Bishop and Confessor:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
