ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_02_06.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--titus--bishop-and-confessor\", \"st--titus\"]"
expression: s.0
---
2025-02-06
Vespers of St. Titus, Bishop and Confessor:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessor Bishops
  Hymn:        Common of Confessor Bishops
  Verse:       Common of Confessor Bishops
  Magnificat:  Common of Confessor Bishops
  Collect:     Proper
