ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_02_07.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--romuald--abbot\", \"st--romuald\"]"
expression: s.0
---
2025-02-07
Vespers of St. Romuald, Abbot:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Confessors (Non-Bishop)
  Hymn:        Common of Confessors (Non-Bishop)
  Verse:       Common of Confessors (Non-Bishop)
  Magnificat:  Common of Confessors (Non-Bishop)
  Collect:     Proper
