ordo/tests/snapshots/integration_year_ordo__day_vespers@_2025_02_10.snap
---
source: ordo/tests/integration_year_ordo.rs
description: "[\"st--scholastica--virgin\", \"st--scholastica\"]"
expression: s.0
---
2025-02-10
Vespers of St. Scholastica, Virgin:
Vespers:
  Antiphons:   Ordinary of Time after Epiphany (or Psalter)
  Psalms:      Psalter
  Chapter:     Common of Virgins
  Hymn:        Common of Virgins
  Verse:       Common of Virgins
  Magnificat:  Common of Virgins
  Collect:     Proper
